Change TwinCAT include and library directories

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -62,22 +62,28 @@ if (WIN32)
         if(NOT EXISTS "${TWINCAT_INSTALL_DIR}/../AdsApi/TcAdsDll")
             get_filename_component(TWINCAT_INSTALL_DIR "[HKEY_LOCAL_MACHINE\\Software\\Wow6432Node\\Beckhoff\\TwinCAT3\\3.1;InstallDir]" REALPATH)
             if(NOT EXISTS "${TWINCAT_INSTALL_DIR}/../AdsApi/TcAdsDll")
-                message(FATAL_ERROR "Make sure that TwinCAT 3.1 is installed correctly.") 
+                message(FATAL_ERROR "Make sure that TwinCAT 3.1 is installed correctly (${TWINCAT_INSTALL_DIR}/../AdsApi/TcAdsDll does not exist).")
             endif()
         endif()
     endif()
-    target_include_directories(AdsToJava PRIVATE "${TWINCAT_INSTALL_DIR}/../AdsApi/TcAdsDll/Include/")
+    if(NOT EXISTS "${TWINCAT_INSTALL_DIR}/sdk/Include")
+        message(FATAL_ERROR "Make sure that TwinCAT 3.1 is installed correctly (${TWINCAT_INSTALL_DIR}/sdk/Include does not exist).")
+    endif()
+
+    # preferring the sdk/Include directory because the header files from ../AdsApi/TcAdsDll/Include/ might be too old
+    target_include_directories(AdsToJava PRIVATE "${TWINCAT_INSTALL_DIR}/sdk/Include/")
+
     if("${CMAKE_SIZEOF_VOID_P}" STREQUAL "4")
         find_library(TC_ADS_DLL_LIBRARY NAMES "TcAdsDll" "libTcAdsDll" HINTS "${TWINCAT_INSTALL_DIR}/../AdsApi/TcAdsDll/Lib/" REQUIRED)
     else()
         find_library(TC_ADS_DLL_LIBRARY NAMES "TcAdsDll" "libTcAdsDll" HINTS "${TWINCAT_INSTALL_DIR}/../AdsApi/TcAdsDll/x64/lib/" REQUIRED)
     endif()
 else()
-    target_include_directories(AdsToJava PRIVATE "/usr/local/include/TwinCAT_4024/Include/")
+    target_include_directories(AdsToJava PRIVATE "/usr/local/include/")
     if("${CMAKE_SIZEOF_VOID_P}" STREQUAL "4")
-        find_library(TC_ADS_DLL_LIBRARY NAMES "TcAdsDll" "libTcAdsDll" HINTS "/usr/local/include/TwinCAT_4024/Lib/" REQUIRED)
+        find_library(TC_ADS_DLL_LIBRARY NAMES "TcAdsDll" "libTcAdsDll" HINTS "/usr/local/lib32/" REQUIRED)
     else()
-        find_library(TC_ADS_DLL_LIBRARY NAMES "TcAdsDll" "libTcAdsDll" HINTS "/usr/local/include/TwinCAT_4024/Lib/x64/" REQUIRED)
+        find_library(TC_ADS_DLL_LIBRARY NAMES "TcAdsDll" "libTcAdsDll" HINTS "/usr/local/lib/" REQUIRED)
     endif()
 endif()
 target_link_libraries(AdsToJava "${TC_ADS_DLL_LIBRARY}")
