Use include directory from JAVA_HOME instead of submodule

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -48,11 +48,13 @@ if (NOT WIN32)
     add_compile_definitions(POSIX)
 endif()
 
-target_include_directories(AdsToJava PRIVATE "../jdk/src/java.base/share/native/include/")
+target_include_directories(AdsToJava PRIVATE "$ENV{JAVA_HOME}/include/")
 if (WIN32)
-    target_include_directories(AdsToJava PRIVATE "../jdk/src/java.base/windows/native/include/")
+    target_include_directories(AdsToJava PRIVATE "$ENV{JAVA_HOME}/include/win32/")
+elseif (EXISTS "$ENV{JAVA_HOME}/include/freebsd")
+    target_include_directories(AdsToJava PRIVATE "$ENV{JAVA_HOME}/include/freebsd/")
 else()
-    target_include_directories(AdsToJava PRIVATE "../jdk/src/java.base/unix/native/include/")
+    target_include_directories(AdsToJava PRIVATE "$ENV{JAVA_HOME}/include/unix/")
 endif()
 
 if (WIN32)
