Run the bootstrap batch script in CI

--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -1,4 +1,4 @@
-name: Build Java project (CI for the C++ part not implemented, yet)
+name: Build C++ DLL and Java Maven project
 
 on: push
 
@@ -17,24 +17,25 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: ${{ env.JAVA_VERSION }}
+  
+    - name: 'Create "dependencies" directory'
+      shell: pwsh
+      run: |
+        [IO.Directory]::CreateDirectory("dependencies")
+  
+    - name: 'The ADS API is available as a secret. It is a base64-encoded .zip file.'
+      shell: pwsh
+      env:
+        ADS_API_ZIP_BASE64: ${{ secrets.ADS_API_ZIP_BASE64 }}
+      run: |
+        [IO.File]::WriteAllBytes("dependencies\AdsApi.zip", [Convert]::FromBase64String("$env:ADS_API_ZIP_BASE64"))
+  
+    - name: 'Put the contents of the "AdsApi.zip" archive into the "dependencies" directory.'
+      shell: pwsh
+      run: |
+        Expand-Archive "dependencies\AdsApi.zip" -DestinationPath dependencies\
 
-    - name: 'Clear'
+    - name: 'Run the bootstrap batch script'
       shell: cmd
       run: |
-        CALL run\clear.bat
-
-    - name: 'Build Java'
-      shell: cmd
-      run: |
-        CALL run\build_java.bat
-
-    - name: 'Build Documentation'
-      shell: cmd
-      run: |
-        CALL run\build_doc.bat
-
-    - name: 'Build Samples'
-      shell: cmd
-      run: |
-        CALL run\build_samples.bat
-
+        CALL bootstrap.bat
