--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -57,7 +57,14 @@ else()
     target_include_directories(AdsToJava PRIVATE "$ENV{JAVA_HOME}/include/unix/")
 endif()
 
-if (WIN32)
+if (EXISTS "dependencies")
+    target_include_directories(AdsToJava PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/../dependencies/AdsApi/TcAdsDll/Include/")
+    if("${CMAKE_SIZEOF_VOID_P}" STREQUAL "4")
+        find_library(TC_ADS_DLL_LIBRARY NAMES "TcAdsDll" "libTcAdsDll" HINTS "${CMAKE_CURRENT_SOURCE_DIR}/../dependencies/AdsApi/TcAdsDll/Lib/" REQUIRED)
+    else()
+        find_library(TC_ADS_DLL_LIBRARY NAMES "TcAdsDll" "libTcAdsDll" HINTS "${CMAKE_CURRENT_SOURCE_DIR}/../dependencies/AdsApi/TcAdsDll/Lib/x64/" REQUIRED)
+    endif()
+elseif (WIN32)
     get_filename_component(TWINCAT_INSTALL_DIR "[HKEY_CURRENT_USER\\Software\\Beckhoff\\TwinCAT3\\3.1;InstallDir]" REALPATH)
     if(NOT EXISTS "${TWINCAT_INSTALL_DIR}/../AdsApi/TcAdsDll")
         get_filename_component(TWINCAT_INSTALL_DIR "[HKEY_LOCAL_MACHINE\\Software\\Beckhoff\\TwinCAT3\\3.1;InstallDir]" REALPATH)
@@ -68,6 +75,7 @@ if (WIN32)
             endif()
         endif()
     endif()
+
     if(EXISTS "${TWINCAT_INSTALL_DIR}/sdk/Include")
         # preferring the sdk/Include directory because the header files from ../AdsApi/TcAdsDll/Include/ might be too old
         target_include_directories(AdsToJava PRIVATE "${TWINCAT_INSTALL_DIR}/sdk/Include/")
@@ -76,16 +84,16 @@ if (WIN32)
     endif()
 
     if("${CMAKE_SIZEOF_VOID_P}" STREQUAL "4")
-        find_library(TC_ADS_DLL_LIBRARY NAMES "TcAdsDll" "libTcAdsDll" HINTS "${TWINCAT_INSTALL_DIR}/../AdsApi/TcAdsDll/Lib/" REQUIRED)
+        find_library(TC_ADS_DLL_LIBRARY NAMES "TcAdsDll" HINTS "${TWINCAT_INSTALL_DIR}/../AdsApi/TcAdsDll/Lib/" REQUIRED)
     else()
-        find_library(TC_ADS_DLL_LIBRARY NAMES "TcAdsDll" "libTcAdsDll" HINTS "${TWINCAT_INSTALL_DIR}/../AdsApi/TcAdsDll/Lib/x64/" "${TWINCAT_INSTALL_DIR}/../AdsApi/TcAdsDll/x64/lib/" REQUIRED)
+        find_library(TC_ADS_DLL_LIBRARY NAMES "TcAdsDll" HINTS "${TWINCAT_INSTALL_DIR}/../AdsApi/TcAdsDll/Lib/x64/" "${TWINCAT_INSTALL_DIR}/../AdsApi/TcAdsDll/x64/lib/" REQUIRED)
     endif()
 else()
     target_include_directories(AdsToJava PRIVATE "/usr/local/include/")
     if("${CMAKE_SIZEOF_VOID_P}" STREQUAL "4")
-        find_library(TC_ADS_DLL_LIBRARY NAMES "TcAdsDll" "libTcAdsDll" HINTS "/usr/local/lib32/" REQUIRED)
+        find_library(TC_ADS_DLL_LIBRARY NAMES "libTcAdsDll" HINTS "/usr/local/lib32/" REQUIRED)
     else()
-        find_library(TC_ADS_DLL_LIBRARY NAMES "TcAdsDll" "libTcAdsDll" HINTS "/usr/local/lib/" REQUIRED)
+        find_library(TC_ADS_DLL_LIBRARY NAMES "libTcAdsDll" HINTS "/usr/local/lib/" REQUIRED)
     endif()
 endif()
 target_link_libraries(AdsToJava "${TC_ADS_DLL_LIBRARY}")
