--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.18.0)
-project(AdsToJava VERSION 3.0.0)
+project(AdsToJava-3 VERSION 3.0.0)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -29,17 +29,17 @@ if(MSVC)
         ${CMAKE_CURRENT_SOURCE_DIR}/version.rc.in
         ${CMAKE_CURRENT_BINARY_DIR}/version.rc
         @ONLY)
-    add_library(AdsToJava SHARED ${SOURCES}
+    add_library(AdsToJava-3 SHARED ${SOURCES}
         ${CMAKE_CURRENT_BINARY_DIR}/version.rc)
 
     if (STRICT_WARNINGS)
-        target_compile_options(AdsToJava PRIVATE /W4 /WX)
+        target_compile_options(AdsToJava-3 PRIVATE /W4 /WX)
     endif()
 else()
-    add_library(AdsToJava SHARED ${SOURCES})
+    add_library(AdsToJava-3 SHARED ${SOURCES})
 
     if (STRICT_WARNINGS)
-        target_compile_options(AdsToJava PRIVATE -Wall -Wextra -Wpedantic -Werror)
+        target_compile_options(AdsToJava-3 PRIVATE -Wall -Wextra -Wpedantic -Werror)
     endif()
 endif()
 
@@ -48,17 +48,17 @@ if (NOT WIN32)
     add_compile_definitions(POSIX)
 endif()
 
-target_include_directories(AdsToJava PRIVATE "$ENV{JAVA_HOME}/include/")
+target_include_directories(AdsToJava-3 PRIVATE "$ENV{JAVA_HOME}/include/")
 if (WIN32)
-    target_include_directories(AdsToJava PRIVATE "$ENV{JAVA_HOME}/include/win32/")
+    target_include_directories(AdsToJava-3 PRIVATE "$ENV{JAVA_HOME}/include/win32/")
 elseif (EXISTS "$ENV{JAVA_HOME}/include/freebsd")
-    target_include_directories(AdsToJava PRIVATE "$ENV{JAVA_HOME}/include/freebsd/")
+    target_include_directories(AdsToJava-3 PRIVATE "$ENV{JAVA_HOME}/include/freebsd/")
 else()
-    target_include_directories(AdsToJava PRIVATE "$ENV{JAVA_HOME}/include/unix/")
+    target_include_directories(AdsToJava-3 PRIVATE "$ENV{JAVA_HOME}/include/unix/")
 endif()
 
 if (EXISTS "dependencies")
-    target_include_directories(AdsToJava PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/../dependencies/AdsApi/TcAdsDll/Include/")
+    target_include_directories(AdsToJava-3 PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/../dependencies/AdsApi/TcAdsDll/Include/")
     if("${CMAKE_SIZEOF_VOID_P}" STREQUAL "4")
         find_library(TC_ADS_DLL_LIBRARY NAMES "TcAdsDll" "libTcAdsDll" HINTS "${CMAKE_CURRENT_SOURCE_DIR}/../dependencies/AdsApi/TcAdsDll/Lib/" REQUIRED)
     else()
@@ -78,9 +78,9 @@ elseif (WIN32)
 
     if(EXISTS "${TWINCAT_INSTALL_DIR}/sdk/Include")
         # preferring the sdk/Include directory because the header files from ../AdsApi/TcAdsDll/Include/ might be too old
-        target_include_directories(AdsToJava PRIVATE "${TWINCAT_INSTALL_DIR}/sdk/Include/")
+        target_include_directories(AdsToJava-3 PRIVATE "${TWINCAT_INSTALL_DIR}/sdk/Include/")
     else()
-        target_include_directories(AdsToJava PRIVATE "${TWINCAT_INSTALL_DIR}/../AdsApi/TcAdsDll/Include")
+        target_include_directories(AdsToJava-3 PRIVATE "${TWINCAT_INSTALL_DIR}/../AdsApi/TcAdsDll/Include")
     endif()
 
     if("${CMAKE_SIZEOF_VOID_P}" STREQUAL "4")
@@ -89,14 +89,14 @@ elseif (WIN32)
         find_library(TC_ADS_DLL_LIBRARY NAMES "TcAdsDll" HINTS "${TWINCAT_INSTALL_DIR}/../AdsApi/TcAdsDll/Lib/x64/" "${TWINCAT_INSTALL_DIR}/../AdsApi/TcAdsDll/x64/lib/" REQUIRED)
     endif()
 else()
-    target_include_directories(AdsToJava PRIVATE "/usr/local/include/")
+    target_include_directories(AdsToJava-3 PRIVATE "/usr/local/include/")
     if("${CMAKE_SIZEOF_VOID_P}" STREQUAL "4")
         find_library(TC_ADS_DLL_LIBRARY NAMES "libTcAdsDll" HINTS "/usr/local/lib32/" REQUIRED)
     else()
         find_library(TC_ADS_DLL_LIBRARY NAMES "libTcAdsDll" HINTS "/usr/local/lib/" REQUIRED)
     endif()
 endif()
-target_link_libraries(AdsToJava "${TC_ADS_DLL_LIBRARY}")
+target_link_libraries(AdsToJava-3 "${TC_ADS_DLL_LIBRARY}")
 
 if("${CMAKE_GENERATOR}" MATCHES "Visual Studio")
     get_filename_component(SDK_DIR "[HKEY_LOCAL_MACHINE\\SOFTWARE\\Microsoft\\Microsoft SDKs\\Windows;CurrentInstallFolder]" REALPATH)
@@ -113,7 +113,7 @@ if("${CMAKE_GENERATOR}" MATCHES "Visual Studio")
 
     list(GET EXISTING_KIT_VER_BIND_DIRS 0 LATEST_EXISTING_KIT_VER_BIND_DIR)
     find_library(VERSION_LIBRARY NAMES "Version" HINTS "${LATEST_EXISTING_KIT_VER_BIND_DIR}" REQUIRED)
-    target_link_libraries(AdsToJava "${VERSION_LIBRARY}")
+    target_link_libraries(AdsToJava-3 "${VERSION_LIBRARY}")
 endif()
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
