Fix find_library call on Tc/BSD

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -91,9 +91,9 @@ elseif (WIN32)
 else()
     target_include_directories(AdsToJava-3 PRIVATE "/usr/local/include/")
     if("${CMAKE_SIZEOF_VOID_P}" STREQUAL "4")
-        find_library(TC_ADS_DLL_LIBRARY NAMES "libTcAdsDll" HINTS "/usr/local/lib32/" REQUIRED)
+        find_library(TC_ADS_DLL_LIBRARY NAMES "TcAdsDll" "libTcAdsDll" HINTS "/usr/local/lib32/" REQUIRED)
     else()
-        find_library(TC_ADS_DLL_LIBRARY NAMES "libTcAdsDll" HINTS "/usr/local/lib/" REQUIRED)
+        find_library(TC_ADS_DLL_LIBRARY NAMES "TcAdsDll" "libTcAdsDll" HINTS "/usr/local/lib/" REQUIRED)
     endif()
 endif()
 target_link_libraries(AdsToJava-3 "${TC_ADS_DLL_LIBRARY}")
