--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -53,11 +53,14 @@ if (WIN32)
     target_include_directories(AdsToJava-3 PRIVATE "$ENV{JAVA_HOME}/include/win32/")
 elseif (EXISTS "$ENV{JAVA_HOME}/include/freebsd")
     target_include_directories(AdsToJava-3 PRIVATE "$ENV{JAVA_HOME}/include/freebsd/")
+elseif (EXISTS "$ENV{JAVA_HOME}/include/linux")
+    target_include_directories(AdsToJava-3 PRIVATE "$ENV{JAVA_HOME}/include/linux/")
 else()
     target_include_directories(AdsToJava-3 PRIVATE "$ENV{JAVA_HOME}/include/unix/")
 endif()
 
 if (EXISTS "dependencies")
+    # the "dependencies" directory can be used to force the build to use specific headers and libraries
     target_include_directories(AdsToJava-3 PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/../dependencies/AdsApi/TcAdsDll/Include/")
     if("${CMAKE_SIZEOF_VOID_P}" STREQUAL "4")
         find_library(TC_ADS_DLL_LIBRARY NAMES "TcAdsDll" "libTcAdsDll" HINTS "${CMAKE_CURRENT_SOURCE_DIR}/../dependencies/AdsApi/TcAdsDll/Lib/" REQUIRED)
@@ -88,6 +91,14 @@ elseif (WIN32)
     else()
         find_library(TC_ADS_DLL_LIBRARY NAMES "TcAdsDll" HINTS "${TWINCAT_INSTALL_DIR}/../AdsApi/TcAdsDll/Lib/x64/" "${TWINCAT_INSTALL_DIR}/../AdsApi/TcAdsDll/x64/lib/" REQUIRED)
     endif()
+elseif ("${CMAKE_SYSTEM_NAME}" STREQUAL "Linux")
+    # use https://github.com/Beckhoff/ADS from the git submodule
+    add_compile_definitions(USE_OPENSOURCE_ADSLIB)
+    if("${CMAKE_SIZEOF_VOID_P}" STREQUAL "4")
+       message(FATAL_ERROR "Build script not implemented for 32bit Linux.")
+    endif()
+    target_include_directories(AdsToJava-3 PRIVATE "/usr/local/include/" "${CMAKE_CURRENT_SOURCE_DIR}/../adslib_for_linux/AdsLib/")
+    find_library(TC_ADS_DLL_LIBRARY NAMES "TcAdsDll" "libTcAdsDll" "libads.so" HINTS "/usr/local/lib/" "${CMAKE_CURRENT_SOURCE_DIR}/../adslib_for_linux/build/AdsLib/" REQUIRED)
 else()
     target_include_directories(AdsToJava-3 PRIVATE "/usr/local/include/")
     if("${CMAKE_SIZEOF_VOID_P}" STREQUAL "4")
